--- a/app/src/main/res/xml/content_detail_scene.xml
+++ b/app/src/main/res/xml/content_detail_scene.xml
@@ -3,29 +3,43 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ConstraintSet android:id="@+id/start">
-        <Constraint android:id="@+id/status_text"
+        <Constraint android:id="@+id/textview_status_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@+id/status_title"
-            app:layout_constraintBottom_toBottomOf="@+id/status_title" />
+            app:layout_constraintStart_toStartOf="@+id/textview_file_name"
+            app:layout_constraintBottom_toBottomOf="@+id/textview_status_title" />
+
+        <Constraint android:id="@+id/textview_status_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@+id/button_ok"
+            android:layout_marginStart="16dp"
+            app:layout_constraintStart_toStartOf="@+id/textview_file_name_title" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
-        <Constraint android:id="@id/status_text"
+        <Constraint android:id="@id/textview_status_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@+id/status_title"
-            app:layout_constraintStart_toStartOf="@+id/file_name"/>
+            app:layout_constraintBottom_toBottomOf="@+id/textview_status_title"
+            app:layout_constraintStart_toStartOf="@+id/textview_file_name"
+            app:layout_constraintTop_toBottomOf="@+id/textview_file_name"/>
+
+        <Constraint android:id="@+id/textview_status_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/textview_file_name"
+            app:layout_constraintStart_toStartOf="@+id/textview_file_name_title" />
     </ConstraintSet>
 
     <Transition
         app:constraintSetStart="@+id/start"
         app:constraintSetEnd="@id/end"
-        app:duration="2500"
+        app:duration="1500"
         app:autoTransition="animateToEnd">
 
         <OnClick
-            app:targetId="@id/status_text"
+            app:targetId="@id/textview_status_text"
             app:clickAction="toggle" />
     </Transition>
 
